fix file download service to handle URI conversion and improve error handling